feat(user): add get all users endpoint
